--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = 'https://4566.lol/'
 defaultContentLanguage = 'zh'
 languageCode = 'zh-cn'
-title = '再来一瓶'
+title = '4566.lol'
 theme='hugo-book'
 
 # Book configuration
