--- a/hugo.toml
+++ b/hugo.toml
@@ -37,8 +37,8 @@ enableGitInfo = true
 [menu]
 # [[menu.before]]
 [[menu.after]]
-  name = "15元1000G不限时"
-  url = "https://xn--mes995ajya725k.xyz/#/register?code=xFHkxqZv"
+  name = "8元200G不限时"
+  url = "https://jsjc.cfd/#/register?code=w7rsHzIL"
   weight = 20
 [params]
 # 黑暗模式
